# codecup

./: README.md
6561/: CMakeLists.txt  Human.cc  PlayerFactory.cc  README.md  Random.cc  Submission.sh  beautify.sh
6561/VS2013/: ai6561.sln  ai6561.vcxproj  ai6561.vcxproj.filters
6561/benchmarks/: BoardBenchmark.cc
6561/sources/: Competition.cc  Competition.h  ExpectMax.cc  Player.h  PlayerFactory.h  TTable.cc  main.cc
6561/tests/: BoardTest.cc  CMakeLists.txt
6561/tools/: beautify.sh
ayu/: AI.c  AI.h  Common.h  DFS.c  Data.c  Data.h  Group.c  Group.h  HashSet.c  HashSet.h  IO.c  IO.h  LightWeightAI.c  MCTS.c  Makefile  Mamay.c  Opening.c  OpeningBook.c  OpeningBook.h  OpeningGenerator.c  Position.c  Position.h  Queue.c  Queue.h  README.md  Random.c  Simple.c  Stack.c  Stack.h  TDL.c  TODO.txt  TTable.c  TTable.h  Test.c  Timer.c  Timer.h  Tree.c  Tree.h  Util.c  Util.h  (+2 more)
ayu-player-templates/: README.md  player.c  player.cpp  player.java
polyy/: Makefile  ai.h  heuristic.cpp  merge.py  random_elsewhere_move.cpp  random_joint_move.cpp  random_neighbour_move.cpp
